ARM: pia335x: fix MACH TYPE name
- AM335XPIA -> PIA_AM335X

Signed-off-by: Björn Krombholz <b.krombholz@pironex.de>

--- a/arch/arm/mach-omap2/Kconfig
+++ b/arch/arm/mach-omap2/Kconfig
@@ -342,7 +342,7 @@ config MACH_AM335XIAEVM
 	depends on SOC_OMAPAM33XX
 	default y
 
-config MACH_AM335XPIA
+config MACH_PIA_AM335X
 	bool "pironex piA-AM335X boards"
 	depends on SOC_OMAPAM33XX
 	default y
